--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
+              <ion-icon name="mail"></ion-icon>
             </div>
 
 
@@ -143,7 +143,7 @@
             <li class="contact-item">
 
               <div class="icon-box">
-                <ion-icon name="school-outline"></ion-icon>
+                <ion-icon name="school"></ion-icon>
               </div>
   
               <div class="contact-info">
@@ -735,7 +735,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="school"></ion-icon>
             </div>
 
             <h3 class="h3">Higher Education</h3>
@@ -782,7 +782,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="business"></ion-icon>
             </div>
 
             <h3 class="h3">Experience</h3>
@@ -1344,7 +1344,7 @@
             <li class="contact-item">
   
               <div class="icon-box">
-                <ion-icon name="mail-outline"></ion-icon>
+                <ion-icon name="mail"></ion-icon>
               </div>
   
   
