Update Coding Skills Section

--- a/index.html
+++ b/index.html
@@ -467,6 +467,16 @@
 
 
 
+      </ul>
+
+    </section>
+
+
+    <section class="service">
+
+      <h3 class="h3 service-title">Coding Skills</h3>
+
+      <ul class="service-list">
 
 
 
@@ -477,10 +487,11 @@
             <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
           </div>
           <div class="service-content-box">
-            <h4 class="h4 service-item-title">Python, R, SQL, HTML, VBA</h4>
+            <h4 class="h4 service-item-title">Languages and OS</h4>
             <p class="service-item-text">
-              I have experience in the above languages, with my experience ranked in 
-              the corresponding order.
+              I have experience in Python, R, SQL, HTML, VBA, with the majority of my 
+              machine learning experience in Python. I am also proficient in Windows, Ubuntu, 
+              and macOS. By extension, I am comfortable writing bash scripts and batch files.
             </p>
           </div>
         </li>
@@ -488,10 +499,27 @@
 
 
 
-      </ul>
 
-    </section>
+        <li class="service-item">
+          <div class="service-icon-box">
+            <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+          </div>
+          <div class="service-content-box">
+            <h4 class="h4 service-item-title">Python Packages</h4>
+            <p class="service-item-text">
+              I have experience in Pytorch, Scikit-Learn, Tensorflow, 
+              Matplotlib, Seaborn, Pandas and Numpy. I am also comfortable writing
+              parallel functions and have built my own machine learning packages
+              that can provide examples of my coding style. Please see the Projects tab.
+            </p>
+          </div>
+        </li>
 
+
+
+  </ul>
+
+</section>
 
 
         <!--
