--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
               <ion-icon name="school"></ion-icon>
             </div>
 
-            <h3 class="h3">Higher Education</h3>
+            <h3 class="h3 timeline-title">Higher Education</h3>
           </div>
 
           <ol class="timeline-list">
@@ -813,7 +813,7 @@
               <ion-icon name="business"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3 timeline-title">Experience</h3>
           </div>
 
           <ol class="timeline-list">
