--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
           <li class="contact-item">
 
-            <div class="icon-box">
-              <ion-icon name="mail"></ion-icon>
-            </div>
+            <a href="mailto:alexander.capstick19@imperial.ac.uk"><div class="icon-box">
+              <ion-icon name="mail" ></ion-icon>
+            </div></a>
 
 
           <!--
@@ -102,9 +102,9 @@
 
           <li class="contact-item">
 
-            <div class="icon-box">
+            <a href="https://twitter.com/alex_capstick_"><div class="icon-box">
               <ion-icon name="logo-twitter"></ion-icon>
-            </div>
+            </div></a>
 
             <div class="contact-info">
               <p class="contact-title">Twitter</p>
@@ -116,9 +116,9 @@
 
           <li class="contact-item">
 
-            <div class="icon-box">
+            <a href="https://www.linkedin.com/in/alexander-capstick/"><div class="icon-box">
               <ion-icon name="logo-linkedin"></ion-icon>
-            </div>
+            </div></a>
 
             <div class="contact-info">
               <p class="contact-title">LinkedIn</p>
@@ -130,9 +130,9 @@
 
           <li class="contact-item">
 
-            <div class="icon-box">
+            <a href="https://github.com/alexcapstick"><div class="icon-box">
               <ion-icon name="logo-github"></ion-icon>
-            </div>
+            </div></a>
 
             <div class="contact-info">
               <p class="contact-title">GitHub</p>
