--- a/index.html
+++ b/index.html
@@ -140,17 +140,32 @@
               <a href="https://github.com/alexcapstick" class="contact-link">alexcapstick</a>
             </div>
 
+
+          <li class="contact-item">
+
+            <a href="https://barnaghi-machine-intelligence-lab.github.io"><div class="icon-box">
+              <ion-icon name="hardware-chip"></ion-icon>
+            </div></a>
+
+            <div class="contact-info">
+              <p class="contact-title">Lab</p>
+
+              <a href="https://barnaghi-machine-intelligence-lab.github.io" class="contact-link">Barnaghi Lab</a>
+            </div>
+
+
             <li class="contact-item">
 
-              <div class="icon-box">
+              <a href="https://www.imperial.ac.uk/"><div class="icon-box">
                 <ion-icon name="school"></ion-icon>
-              </div>
+              </div></a>
   
               <div class="contact-info">
                 <p class="contact-title">University</p>
   
-                <address>Imperial College London</address>
+                <a href="https://www.imperial.ac.uk/" class="contact-link">Imperial College London</a>
               </div>
+
   
             </li>
 
