Add GIF and Make Icons Links

--- a/index.html
+++ b/index.html
@@ -1387,10 +1387,9 @@
 
             <li class="contact-item">
   
-              <div class="icon-box">
+              <a href="mailto:alexander.capstick19@imperial.ac.uk"><div class="icon-box">
                 <ion-icon name="mail"></ion-icon>
-              </div>
-  
+              </div></a>
   
             <!--
               - #TODO: This email is too long and goes under the other
@@ -1403,9 +1402,9 @@
   
             <li class="contact-item">
   
-              <div class="icon-box">
+              <a href="https://twitter.com/alex_capstick_"><div class="icon-box">
                 <ion-icon name="logo-twitter"></ion-icon>
-              </div>
+              </div></a>
   
               <div class="contact-info">
                 <a href="https://twitter.com/alex_capstick_" class="contact-link">@alex_capstick_</a>
@@ -1415,9 +1414,9 @@
   
             <li class="contact-item">
   
-              <div class="icon-box">
+              <a href="https://www.linkedin.com/in/alexander-capstick/"><div class="icon-box">
                 <ion-icon name="logo-linkedin"></ion-icon>
-              </div>
+              </div></a>
   
               <div class="contact-info">
                 <a href="https://www.linkedin.com/in/alexander-capstick/" class="contact-link">Alex Capstick</a>
@@ -1427,9 +1426,9 @@
   
             <li class="contact-item">
   
-              <div class="icon-box">
+              <a href="https://github.com/alexcapstick"><div class="icon-box">
                 <ion-icon name="logo-github"></ion-icon>
-              </div>
+              </div></a>
   
               <div class="contact-info">
                 <a href="https://github.com/alexcapstick" class="contact-link">alexcapstick</a>
@@ -1454,7 +1453,16 @@
   
           </ul>
 
+          <div >
+            <p align="center" style="margin-top: 50px;" >
+              <img width="30%" src="./assets//images/header.gif">
+            </p>
+          </div>
+
+
         </section>
+
+
 
       </article>
 
