--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h4>Education</h4>
       </div>
 
-      <ol class="timeline-list">
+      <ul class="timeline-list">
 
         <li class="timeline-item">
           <h4 class="timeline-item-title">Imperial College London, 2021 — 2025</h4>
@@ -154,14 +154,14 @@
           </p>
         </li>
 
-      </ol>
+      </ul>
 
 
       <div class="title-wrapper">
         <h4>Experience</h4>
       </div>
 
-      <ol class="timeline-list">
+      <ul class="timeline-list">
 
         <li class="timeline-item">
           <h4 class="timeline-item-title">Imperial College London, London, 2022 — Current </h4>
@@ -222,7 +222,7 @@
           </p>
         </li>
 
-      </ol>
+      </ul>
 
     </div>
 
