--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
       <h3 class="featurette-heading">About Me</h3>
       <img class="featurette-image img-circle img-responsive pull-left" src="./assets/alex_capstick.jpeg">
       <p>
-        I am a PhD student at Imperial College London. My research is focused on using
+        I am a PhD student at Imperial College London and my research is mainly focused on using
         machine learning techniques for the extraction of clinical insights from in-home monitoring data. Within
-        healthcare my work is focused on people living with Dementia.
+        healthcare my work has mostly revolved around people living with Dementia.
       </p>
 
       <p>
-        My interests lie in theoretical machine learning and building new techniques that are applicable to the
+        My interests are in theoretical machine learning and building new techniques that are applicable to the
         world of healthcare.
       </p>
 
@@ -105,8 +105,8 @@
         <li> Continual learning </li>
         <li> Anomaly detection </li>
         <li> Learning from unreliable data </li>
-        <li> Self-supervised Learning </li>
-        <li> Generative Modeling </li>
+        <li> Self-supervised learning </li>
+        <li> Generative modeling </li>
         <li> The use of pretrained models in healthcare monitoring </li>
       </ul>
       </p>
@@ -167,7 +167,7 @@
           <h4 class="timeline-item-title">Imperial College London, London, 2022 — Current </h4>
           <h5 class="timeline-item-role">Teaching Assistant for Machine Learning for Neuroscience</h5>
           <p class="timeline-item-text">
-            Prepare materials, present materials, instruct in labs, and mark coursework
+            Prepare and present materials, instruct in labs, give tutorials on Pytorch, and mark coursework
             for the Machine Learning for Neuroscience course.
           </p>
         </li>
@@ -185,40 +185,7 @@
           <h5 class="timeline-item-role">Data and Analytics Graduate</h5>
           <p class="timeline-item-text">
             Working as part of the data and analytics graduate program, gaining experience
-            in the data science, analytics, and risk management teams.
-          </p>
-        </li>
-
-        <li class="timeline-item">
-          <h4 class="timeline-item-title">Investec, London, 2019 — 2019</h4>
-          <h5 class="timeline-item-role">Data and Analytics Summer Intern</h5>
-          <p class="timeline-item-text">
-            Working as part of the data and analytics summer internship program, gaining experience
-            in the data science and analytics teams.
-          </p>
-        </li>
-
-        <li class="timeline-item">
-          <h4 class="timeline-item-title">Green Chimneys Summer Camp, New York, 2018 — 2018</h4>
-          <h5 class="timeline-item-role">Science Teacher</h5>
-          <p class="timeline-item-text">
-            Teaching science through demonstrations and experiments.
-          </p>
-        </li>
-
-        <li class="timeline-item">
-          <h4 class="timeline-item-title">JP Morgan, London, 2018 — 2018</h4>
-          <h5 class="timeline-item-role">Intern</h5>
-          <p class="timeline-item-text">
-            Intern focusing in the sales teams.
-          </p>
-        </li>
-
-        <li class="timeline-item">
-          <h4 class="timeline-item-title">Homewood School, Kent, 2015 — 2016</h4>
-          <h5 class="timeline-item-role">Mathematics Teacher</h5>
-          <p class="timeline-item-text">
-            GCSE and A Level teacher of Mathematics.
+            in the data science, analytics, machine learning and risk management teams.
           </p>
         </li>
 
@@ -346,14 +313,13 @@
 
 
         <li>
-          <a href="https://github.com/PBarnaghi/ML4NS" target="_blank">
+          <a href="https://ml4ns.github.io/" target="_blank">
             <h4 class="project-item">Machine Learning for Neuroscience Module</h4>
           </a>
           <p class="project-description">
-            Department of Brain Sciences,
-            Imperial College London &
-            Care Research and Technology Centre,
-            The UK Dementia Research Institute.
+            This is a module I am a assistant teacher for at Imperial College London for the MSc
+            Computational Neuroscience.
+            I also put the course website together, which is a work in progress!
           </p>
         </li>
 
