--- a/index.html
+++ b/index.html
@@ -194,109 +194,21 @@
     </div>
 
 
+
+
     <hr class="featurette-divider" id="publications">
 
     <div class="featurette">
       <h3 class="featurette-heading">Publications</h3>
-
-      <h4 class="project-filter-title">Published</h4>
-
-      <ul class="project-list">
-
-        <li class="project-item">
-          <h4 class="project-title">Predicting Targets with Data from Non-Conforming Sources</h4>
-          <p class="project-authors"><strong>A. Capstick,</strong> P. Barnaghi</p>
-          <p class="project-destination">ICLR 2023, Tiny Paper Track</p>
-          <p class="project-description">This preliminary work focused on building models that were able to learn
-            predictive models over data sources with differing label assignments.</p>
-          <a class="project-link" href="https://dblp.org/rec/conf/iclr/CapstickB23.html" target="_blank">Paper
-            Link</a>
-          <a class="project-link" href="https://github.com/alexcapstick/Non-Conforming-Sources" target="_blank">Code
-            Link</a>
-          <p class="project-category">Published 2023</p>
-
-        </li>
-
-        <li class="project-item">
-          <h4 class="project-title">TIHM: An Open Dataset for Remote Healthcare Monitoring in Dementia</h4>
-          <p class="project-authors">F. Palermo, Y. Chen, <strong>A. Capstick,</strong> N. Fletcher-LLoyd, C.
-            Walsh, S. Kouchaki,
-            J. True, O. Balazikova, E. Soreq, G. Scott, H. Rostill, R. Nilforooshan, P. Barnaghi</p>
-          <p class="project-destination">Nature Scientific Data</p>
-          <p class="project-description">This work presents a dataset containing in-home activity, sleep,
-            physiology and
-            environmental measurements for up to 56 people living with dementia.</p>
-          <a class="project-link" href="https://github.com/PBarnaghi/TIHM-Dataset" target="_blank">Code Link</a>
-          <p class="project-category">Accepted to be Published 2023</p>
-
-        </li>
-
-
-        <li class="project-item">
-          <h4 class="project-title">Clinically Relevant and Explainable Feature Extraction from Remote Monitoring
-            Data for the Prediction of Urinary Tract Infections</h4>
-          <p class="project-authors"><strong>A. Capstick,</strong> F. Palermo, H. Li, P. Barnaghi, D. Wingfield,
-            M. A Kolanko, D. J Sharp</p>
-          <p class="project-destination">AAIC 2022</p>
-          <p class="project-description">This preliminary work focused on building models for predicting UTIs
-            using in-home activity data.</p>
-          <a class="project-link" href="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/alz.064683"
-            target="_blank">Paper
-            Link</a>
-          <p class="project-category">Published 2022</p>
-
-        </li>
-
-
-        <li class="project-item">
-          <h4 class="project-title">Designing a Clinically Applicable Deep Recurrent Model to Identify
-            Neuropsychiatric Symptoms in People Living with Dementia Using In-Home Monitoring Data</h4>
-          <p class="project-authors">F. Palermo, H. Li, <strong>A. Capstick,</strong> N. Fletcher-Lloyd, Y.
-            Zhao, S. Kouchaki, R. Nilforooshan, D. Sharp, P. Barnaghi</p>
-          <p class="project-destination">NeurIPS 2021, Research2Clinics Workshop</p>
-          <p class="project-description">This work presents a machine learning approach to predicting
-            Neuropsychiatric Symptoms in People Living with Dementia using in-home activity data and recurrent
-            neural networks.</p>
-          <a class="project-link" href="https://arxiv.org/abs/2110.09868" target="_blank">Paper Link</a>
-          <p class="project-category">Published 2021</p>
-        </li>
-      </ul>
-
-      <h4 class="project-filter-title">Under Review</h4>
-
-
-      <ul class="project-list">
-
-        <li class="project-item">
-          <h4 class="project-title">Digital Remote Monitoring for Screening and Early Detection of Urinary Tract
-            Infections</h4>
-          <p class="project-authors"><strong>A. Capstick,</strong> F. Palermo, K. Zakka, N.
-            Fletcher-Lloyd, C. Walsh, T. Cui, S. Kouchaki,
-            R. Jackson, M. Tran, M. Crone, K. Jensen,
-            P. Freemont, R. Vaidyanathan, M. Kolanko, J.
-            True, S. Daniels, D. Wingfield, CR&T Group, R.
-            Nilforooshan, P. Barnaghi</p>
-          <p class="project-destination"> </p>
-          <p class="project-description">We use machine learning and symptom-led feature engineering to build a
-            UTI risk model based on in-home activity and nocturnal physiology.</p>
-          <p class="project-category">Under Review</p>
-        </li>
-
-
-        <li class="project-item">
-          <h4 class="project-title">Learning from Data with Unreliable Sources Using Loss Adapted Plasticity</h4>
-          <p class="project-authors"><strong>A. Capstick,</strong> F. Palermo, P. Barnaghi</p>
-          <p class="project-destination"> </p>
-          <p class="project-description">We present a technique for learning models in situations in which data is
-            being generated from multiple data sources, with different levels of data quality or reliability.</p>
-          <a class="project-link" href="https://github.com/alexcapstick/LossAdaptedPlasticity" target="_blank">Code
-            Link</a>
-          <p class="project-category">Under Review</p>
-        </li>
-      </ul>
-
+      <div>
+        <p>Some of our key works are listed below:</p>
+        <ul class="project-list" id="pubbib"></ul>
+        <div style="display: flex;">
+          <button id="showMoreButton">Show More</button>
+          <button id="showLessButton">Show Less</button>
+        </div>
+      </div>
     </div>
-
 
 
 
