--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="featurette">
       <h3 class="featurette-heading">Publications</h3>
       <div>
-        <p>Some of our key works are listed below:</p>
+        <p>Some of my key works are listed below:</p>
         <ul class="project-list" id="pubbib"></ul>
         <div style="display: flex;">
           <button id="showMoreButton">Show More</button>
