--- a/football_fixtures.html
+++ b/football_fixtures.html
@@ -245,10 +245,11 @@
                             var dateParts = date.split("/");
                             // month is 0-based, that's why we need dataParts[1] - 1
                             var dateObject = new Date(+dateParts[2], dateParts[1] - 1, +dateParts[0]);
+                            var yesterdayDate = todayDate.setDate(todayDate.getDate() - 1);
 
-                            console.log(dateObject, todayDate);
+                            console.log(dateObject, yesterdayDate);
 
-                            if (dateObject < todayDate) return;
+                            if (dateObject < yesterdayDate) return;
 
                             const weekday = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
                             // make date the day and date
