Add women's euro qualifiers

--- a/football_fixtures.html
+++ b/football_fixtures.html
@@ -146,6 +146,10 @@
         .world-cup {
             background-color: rgb(126, 34, 57);
         }
+
+        .uefa-womens-euro-qualifying {
+            background-color: rgb(91, 14, 230);
+        }
     </style>
 
 
