--- a/index.html
+++ b/index.html
@@ -77,17 +77,23 @@
       <h3 class="featurette-heading">About Me</h3>
       <img class="featurette-image img-circle img-responsive pull-left" src="./assets/alex_capstick.jpeg">
       <p>
-        I am a PhD student at Imperial College London and my research is mainly focused on using
-        machine learning techniques for the extraction of clinical insights from in-home monitoring data. Within
-        healthcare my work has mostly revolved around people living with Dementia.
+        I am a student at Imperial College London pursuing a PhD focused on developing
+        machine learning techniques for the extraction of clinical insights from in-home monitoring data,
+        mostly focused on people living with Dementia.
       </p>
 
       <p>
-        My interests are in theoretical machine learning and building new techniques that are applicable to the
-        world of healthcare.
+        My interests are in theoretical machine learning as well as
+        building new techniques that are applicable to healthcare.
       </p>
 
 
+      <p>
+        I am a small part of the 
+        <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>, 
+        supervised by 
+        <a herf="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
+      </p>
 
     </div>
 
@@ -101,13 +107,12 @@
       <h4>I am curious about all things ML and Maths, but specifically:</h4>
       <p> I have worked in the following areas:
       <ul>
+        <li> The use of pretrained models in healthcare monitoring </li>
+        <li> Learning from noisy data </li>
+        <li> Predicting clinical events from in-home time-series data </li>
+        <li> Generative modeling </li>
         <li> Meta-learning </li>
         <li> Continual learning </li>
-        <li> Anomaly detection </li>
-        <li> Learning from unreliable data </li>
-        <li> Self-supervised learning </li>
-        <li> Generative modeling </li>
-        <li> The use of pretrained models in healthcare monitoring </li>
       </ul>
       </p>
 
@@ -129,7 +134,7 @@
           <h4 class="timeline-item-title">Imperial College London, 2021 — 2025</h4>
           <h5 class="timeline-item-role">PhD, Machine learning applied to healthcare</h5>
           <p class="timeline-item-text">
-            Studying the use of machine learning techniques to improve Dementia care through the use
+            Developing machine learning techniques to improve Dementia care through the use
             of in-home sensors.
           </p>
         </li>
@@ -184,8 +189,8 @@
           <h4 class="timeline-item-title">Investec, London, 2019 — 2020</h4>
           <h5 class="timeline-item-role">Data and Analytics Graduate</h5>
           <p class="timeline-item-text">
-            Working as part of the data and analytics graduate program, gaining experience
-            in the data science, analytics, machine learning and risk management teams.
+            Part of the data and analytics graduate program, I gained experience
+            in the data science, analytics, machine learning, and risk management teams.
           </p>
         </li>
 
@@ -237,16 +242,6 @@
 
 
 
-        <li>
-          <a href="https://alexcapstick-aml.readthedocs.io/en/latest/" target="_blank">
-            <h4 class="project-item">AML Python Package</h4>
-          </a>
-          <p class="project-description">
-            Some of my Machine Learning code.
-          </p>
-        </li>
-
-
 
         <li>
           <a href="https://alexs-visualisation-tools.readthedocs.io/en/latest/" target="_blank">
@@ -258,6 +253,15 @@
         </li>
 
 
+
+        <li>
+          <a href="https://alexcapstick-aml.readthedocs.io/en/latest/" target="_blank">
+            <h4 class="project-item">AML Python Package</h4>
+          </a>
+          <p class="project-description">
+            Some of my Machine Learning code.
+          </p>
+        </li>
 
 
 
@@ -272,9 +276,6 @@
             optimisation.
           </p>
         </li>
-
-
-
 
 
 
@@ -298,7 +299,7 @@
             <h4 class="project-item">PDUtils Python Package</h4>
           </a>
           <p class="project-description">
-            Pandas Utils add extra functionality to DataFrames.
+            Pandas Utils adds extra functionality to DataFrames.
           </p>
         </li>
 
