--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
 
       <p>
-        I am a small part of the 
-        <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>, 
-        supervised by 
-        <a herf="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
+        I am a small part of the
+        <a href="https://tmi-lab.github.io/" target="_blank">Translational Machine Intelligence Lab</a>,
+        supervised by
+        <a href="https://profiles.imperial.ac.uk/p.barnaghi" target="_blank">Payam Barnaghi</a>.
       </p>
 
     </div>
