--- a/index.html
+++ b/index.html
@@ -139,6 +139,22 @@
           </p>
         </li>
 
+
+        <li class="timeline-item">
+          <h4 class="timeline-item-title">University of Toronto, 2024</h4>
+          <h5 class="timeline-item-role">
+            Study Placement, Machine Learning and Computational Healthcare
+          </h5>
+          <p class="timeline-item-text">
+            Supervised by
+            <a href="https://www.cs.toronto.edu/~rahulgk/" target="_blank">Rahul Krishnan</a>:
+            Studying the use of language models
+            in building probabilistic predictive models.
+          </p>
+        </li>
+
+
+
         <li class="timeline-item">
           <h4 class="timeline-item-title">Imperial College London, 2019 — 2020</h4>
           <h5 class="timeline-item-role">MSc, Applied Mathematics</h5>
